--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
+
+/* Mint Green #98B9AB */
+/* Faded Royal Blue #5171A5 */
+/* Faded Purple #6D71C6 */
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "PT Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
