--- a/src/views/Dashboard/Dashboard.module.css
+++ b/src/views/Dashboard/Dashboard.module.css
@@ -2,4 +2,8 @@
     height: 100vh;
     width: 100%;
     background: var(--theme-green);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
