--- a/src/components/Dashboard/LineGraph.module.css
+++ b/src/components/Dashboard/LineGraph.module.css
@@ -1,4 +1,10 @@
 .graphContainer {
     width: 50vw;
     height: 50vh;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 10px 0px -5px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 10px 0px -5px rgba(0,0,0,0.3);
+    box-shadow: 0px 10px 0px -5px rgba(0,0,0,0.3);
 }
