feat: adding buttons to show dynamic data change.

--- a/src/views/Dashboard/Dashboard.module.css
+++ b/src/views/Dashboard/Dashboard.module.css
@@ -7,3 +7,10 @@
     justify-content: center;
     flex-direction: column;
 }
+
+.buttonContainer {
+    display: flex;
+    justify-content: space-around;
+    width: 50vw;
+    padding: 20px 0px;
+}
