--- a/src/views/Dashboard/Dashboard.module.css
+++ b/src/views/Dashboard/Dashboard.module.css
@@ -1,11 +1,21 @@
 .container {
     height: 100vh;
     width: 100%;
-    background: var(--theme-green);
+    background: var(--theme-primary);
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+header {
+    display: flex;
+    align-items: center;
+}
+
+header > img {
+    margin-right: 5px;
 }
 
 .buttonContainer {
